# ruth-cli

./: Cargo.toml  LICENSE  README.md  justfile
.github/workflows/: ci.yml  release.yml
asserts/: demo.cast
docs/: GPG_SETUP.md
docs/superpowers/plans/: 2026-03-19-ruth-cli.md
docs/superpowers/specs/: 2026-03-19-ruth-cli-design.md
src/: cli.rs  config.rs  gpg.rs  lib.rs  main.rs  qr.rs  store.rs  totp.rs
tests/: config_test.rs  qr_test.rs  store_test.rs  totp_test.rs
