[package]
name = "ruth-cli"
version = "0.1.0"
edition = "2021"
description = "Agent-friendly TOTP authenticator CLI"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
data-encoding = "2"
image = "0.25"
rqrr = "0.8"
url = "2"
anyhow = "1"
dirs = "5"
